--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -10,5 +10,6 @@
   <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener norefferer">About The Odin Project</a>
   <a href="pages/about.html">About</a>
   <a href="pages/store.html">Store</a>
+  <a href="pages/blog.html"></a>
 </body>
 </html>
